# rknn-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pack.sh
examples/: CMakeLists.txt  basic_usage.cpp  opencv_example.cpp  yolov3.cpp
include/: rknn_cpp.h
include/rknn_cpp/: imodel.h  types.h
include/rknn_cpp/base/: base_model_impl.h
include/rknn_cpp/models/: custom_model.h  resnet_model.h  yolov3_model.h
include/rknn_cpp/utils/: image_utils.h
src/base/: base_model_impl.cpp
src/models/: custom_model.cpp  resnet_model.cpp  yolov3_model.cpp
src/utils/: image_utils.cpp
